--- a/styles/blogparts/_mainblog.scss
+++ b/styles/blogparts/_mainblog.scss
@@ -1,46 +1,92 @@
 main {
     background: $tertiaryColor;
+    padding:5% 0;
 }
 
-.main-blog, .aside {
-    width:calc(50% - 10%);
-    float:left;
-    margin:5% 2%;
+.main {
+    display:flex;
+}
+
+.aside {
+    width:30%;
 
     &__section {
-        background: white;
-        margin-bottom:5%;
         padding:5%;
+        margin-bottom:5%;
+        background:white;
 
-        &--blue {
-            background: white;
-            border-bottom:4px solid $secondaryAccent;
-            padding:5%;
-            margin-bottom:5%;
+        ul li {
+            list-style: disc;
+        }
+
+        &--img {
+            width:100%;
         }
     }
 }
 
-.aside {
-    padding:2%;
+.main-blog {
+    width:60%;
 
-    &__about {
+    &__section, &__section--flex {
         background:white;
-        margin-bottom:5%;
+        padding:2%;
+        margin:0 0 5% 5%;
+
+        &--flex {
+            display:flex;
+
+        }
+
+        &--img {
+            margin:5% 3% 0 0;
+        }
     }
 
-    &__recent-posts {
-        background:white;
+    &__form {
+        margin-left:4%;
     }
+
+    &__name, &__email, &__comment {
+        border:1px solid white;
+        padding:2% 4%;
+    
+    }
+    &__name, &__email {
+        width:calc(50% - 4%);
+    }
+
+    &__email {
+        margin-left:7%;
+    }
+
+    &__comment {
+        width:100%;
+        height:200px;
+        margin:3% 0;
+    }
+
+    &__button {
+        width:100%;
+    }
+
+}
+
+::placeholder { 
+    color: $primaryColor;
+    opacity: 1; 
+}
+
+:-ms-input-placeholder { 
+    color: $primaryColor;
+}
+
+::-ms-input-placeholder { 
+    color: $primaryColor;
+}
+
+.blue {
+    border-bottom:4px solid $secondaryAccent;
 }
 
 
-
-// .main-blog__section {
-//     background: white;
-//     margin-bottom:2%;
-
-//     &--blue {
-//         border-bottom:4px solid $secondaryAccent;
-//     }
-// }
