--- a/styles/contactparts/_global.scss
+++ b/styles/contactparts/_global.scss
@@ -8,17 +8,12 @@ $tertiaryAccent: #68b0c1;
 // General Styles
 html {
     font-size:62.5%;
-    scroll-behavior: smooth;
 }
 
 body {
     font-size:1.6rem;
     color: $primaryColor;
     font-family: 'Cabin', sans-serif;
-
-    p {
-        line-height: 32px;
-    }
 }
 
 .wrapper {
@@ -36,12 +31,6 @@ a {
     text-decoration:none;
 }
 
-main .button {
-    padding:5px 20px;
-    background: $primaryAccent;
-}
-
-
 // Typography Styles
 @mixin primaryFont ($size) {
     font-family: 'Oswald', sans-serif;
@@ -50,39 +39,22 @@ main .button {
     letter-spacing:1px;
 }
 
-h1 {
-    @include primaryFont (8rem);
-    line-height:92px;
-}
-
-h2 {
-    @include primaryFont (4.2rem);
-}
-
-h3 {
-    @include primaryFont (3.2rem);
-}
-
-h4 {
-    @include primaryFont (2.4rem);
-}
-
 .header__links a {
     @include primaryFont (2rem);
     line-height:29px;
-    text-align:right;
-}
-
-main a {
-    @include primaryFont (2rem);
-    line-height:30px;
-    text-transform:uppercase;
 }
 
 a:hover {
     color: white;
 }
 
-a:active {
-    color:white;
+.main-contact__button {
+    @include primaryFont (2rem);
+    line-height:29px;
+}
+
+
+h1 {
+    @include primaryFont (8rem);
+    line-height:92px;
 }
