--- a/styles/blogstyle.css
+++ b/styles/blogstyle.css
@@ -145,7 +145,7 @@ p {
   line-height: 32px; }
 
 .wrapper {
-  max-width: 1080px;
+  max-width: 1300px;
   margin: 0 auto;
   width: 80%; }
 
@@ -188,6 +188,10 @@ h4 {
 a:hover {
   color: white; }
 
+@media (max-width: 768px) {
+  .wrapper {
+    width: 95%; } }
+
 header {
   background: #b9dde7;
   position: relative; }
@@ -210,8 +214,8 @@ header {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin: 0 30%;
-  padding: 2% 0; }
+  margin: 0;
+  padding: 1% 20%; }
   .header__links--title {
     font-size: 3rem; }
 
@@ -293,6 +297,16 @@ main {
 
 .blue {
   border-bottom: 4px solid #227284; }
+
+@media (max-width: 768px) {
+  .aside {
+    width: 40%; }
+  .main-blog {
+    width: 60%; }
+    .main-blog__name, .main-blog__email {
+      width: 100%;
+      margin: 1% 0;
+      padding: 2%; } }
 
 .footer-section {
   background: #171717; }
