--- a/styles/contactparts/_header.scss
+++ b/styles/contactparts/_header.scss
@@ -9,21 +9,14 @@ header {
     }
 }
 
-// .navbar {
-//     position:fixed;
-//     top:0;
-//     width:100%;
-//     background: $secondaryColor;
-// }
-
 
 .header {
     display:flex;
     flex-direction:row;
     justify-content: center;
     justify-content: space-between;
-    margin:0 30%;
-    padding:2% 0;
+    margin:0;
+    padding:1% 20%;
     
 
     &__links--title {
