--- a/styles/contactstyle.css
+++ b/styles/contactstyle.css
@@ -141,7 +141,7 @@ body {
   font-family: 'Cabin', sans-serif; }
 
 .wrapper {
-  max-width: 1080px;
+  max-width: 1300px;
   margin: 0 auto;
   width: 80%; }
 
@@ -198,8 +198,8 @@ header {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  margin: 0 30%;
-  padding: 2% 0; }
+  margin: 0;
+  padding: 1% 20%; }
   .header__links--title {
     font-size: 3rem; }
 
