--- a/styles/partials/_gallery.scss
+++ b/styles/partials/_gallery.scss
@@ -23,3 +23,23 @@
     }
 
 }
+
+//MEDIA QUERIES
+@media (max-width:630px) {
+    .gallery {
+        margin:0;
+        width:100%;
+    }
+    .gallery-container {
+        margin:0;
+    }
+
+    .gallery-container__item {
+        margin:0;
+        width:40%;
+
+        &--img {
+            display:block
+        }
+    }
+}
