--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -7,8 +7,9 @@ header {
     flex-direction:row;
     justify-content: center;
     justify-content: space-between;
-    margin:0 30%;
-    padding:2% 0;
+    margin: 0;
+    padding:1%  20%;
+
 
     &__links--title {
         font-size: 3rem;
@@ -29,7 +30,6 @@ header {
         }
 
         img {
-            // transform: rotate(0deg);
             position:absolute;
             top:-5px;
             right:-60px;
@@ -49,3 +49,51 @@ header {
     }
 }
 
+// MEDIA QUERIES
+@media (min-width:969px) and (max-width:1200px) {
+    .header__links {
+        margin:0 5%;
+    }
+
+    .logo-section__img {
+        bottom:120px;
+    }
+}
+
+@media (max-width:970px) {
+    .header__links {
+        margin:0 3%;
+    }
+
+       .logo-section__title {
+       margin:10% auto;
+   }
+   
+    .logo-section__img {
+        bottom:-100px;
+        left:0px;
+        bottom:-50px;
+        width:25%;
+    }
+}
+
+@media (max-width:767px) {
+     .header {
+        margin:0;
+        padding:0;
+    }
+
+    .header__links {
+        margin:0 2%;
+    }
+
+    .logo-section__img {
+        bottom:0;
+        left:0;
+    }
+}
+
+
+@media (max-width:630px) {
+    
+}
