--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,5 +1,6 @@
 header {
     background: $secondaryColor;
+
 }
 
 .header {
@@ -8,10 +9,10 @@ header {
     justify-content: center;
     justify-content: space-between;
     margin: 0;
-    padding:1%  20%;
+    padding:2%  20%;
 
 
-    &__links--title {
+    &__links .title {
         font-size: 3rem;
 
     }
@@ -19,19 +20,17 @@ header {
 
 .logo-section {
     display:flex;
+    padding:8% 0;
 
 
     &__title {
         margin:10% 0 12% 50%;
         position:relative;
-
-        h1 {
-            font-size:10rem;
-        }
+        
 
         img {
             position:absolute;
-            top:-5px;
+            top:-60px;
             right:-60px;
         }
     }
@@ -78,6 +77,7 @@ header {
 }
 
 @media (max-width:767px) {
+    
      .header {
         margin:0;
         padding:0;
@@ -92,7 +92,6 @@ header {
         left:0;
     }
 }
-
 
 @media (max-width:630px) {
     
