--- a/styles/partials/_journey.scss
+++ b/styles/partials/_journey.scss
@@ -36,10 +36,16 @@
 
 @media (max-width:630px) {
     .journey {
-        padding-bottom:7%;
+        padding:7% 0 10% 0;
 
         &-img {
-            width:40%
+            width:40%;
         }
     }
 }
+
+    @media (max-width:530px) {
+        .journey-content__title {
+            text-align:center;
+        }
+    }
