--- a/styles/blogparts/_header.scss
+++ b/styles/blogparts/_header.scss
@@ -4,11 +4,11 @@ header {
 
     h1 {
         position:absolute;
-        bottom:-60px;
+        bottom:-80px;
         left:150px;
+        font-size:8rem;
     }
 }
-
 
 .header {
     display:flex;
@@ -16,9 +16,9 @@ header {
     justify-content: center;
     justify-content: space-between;
     margin:0;
-    padding:1% 20%;
+    padding:2% 20%;
 
-    &__links--title {
+    &__links .title {
         font-size: 3rem;
 
     }
@@ -33,3 +33,17 @@ header {
     }
 }
 
+// MEDIA QUERIES
+@media (max-width:767px) {
+    header h1 {
+        left:8%;
+    }
+     .header {
+        margin:0;
+        padding:0;
+    }
+
+    .header__links {
+        margin:0 2%;
+    }
+}
