--- a/styles/blogparts/_mainblog.scss
+++ b/styles/blogparts/_mainblog.scss
@@ -94,6 +94,14 @@ main {
     border-bottom:4px solid $secondaryAccent;
 }
 
+#more {
+    display:block;
+}
+
+#myBtn {
+    display:none;
+}
+
 //MEDIA QUERIES
 @media (max-width:768px) {
     .aside {
@@ -127,11 +135,6 @@ main {
     }
 }
 
-#more {
-    display:none;
-}
-
-
 @media (max-width:645px) {
     .main-blog__section--img {
         display:none;
@@ -139,7 +142,13 @@ main {
 
     .aside, .main-blog {
         width:50%;
-
-
     }
+}
+
+#more {
+    display:none;
+}
+
+#myBtn {
+    display:block;
 }
