--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -18,7 +18,7 @@
         border-radius:50%;
         position:absolute;
         left:-50px;
-        top:20px;
+        top:10px;
     }
 }
 
@@ -38,12 +38,13 @@
 
         &__icon {
             position:absolute;
-            top:-20px;
-            left:25px;
+            top:-30px;
+            left:33px;
         }
 
         &__text--title {
             text-align:center;
+            font-size:2.5rem;
         }
     }
 
@@ -60,5 +61,11 @@
 
     .navigation__icon {
         left:15px;
+    }
+}
+
+@media (max-width:480px) {
+    .navigation__text--title {
+        font-size:2rem;
     }
 }
