--- a/styles/partials/_nav.scss
+++ b/styles/partials/_nav.scss
@@ -27,6 +27,7 @@
     .nav-container {
         height:140px;
         width:100%;
+        margin-top:5%;
     }
 
     .navigation {
@@ -60,7 +61,7 @@
     }
 
     .navigation__icon {
-        left:15px;
+        left:20px;
     }
 }
 
