--- a/styles/partials/_quadrant.scss
+++ b/styles/partials/_quadrant.scss
@@ -68,8 +68,11 @@
 }
 
 @media (max-width:767px) {
+    .one {
+        margin: 8% 0 8% 10%;
+    }
     .two {
-        margin-left:8%;
+        margin:8% 0 8% 12%;
     }
 }
 
