--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -87,6 +87,7 @@ header {
         margin:0 2%;
     }
 
+   
     .logo-section__img {
         bottom:0;
         left:0;
@@ -94,5 +95,7 @@ header {
 }
 
 @media (max-width:630px) {
-    
+    .logo-section__title {    
+        margin-right: 20%;
+    }
 }
